# dm-vio

./: CMakeLists.txt  README.md  package.xml
launch/: dmvio.launch
src/: main_dmvio_dataset.cpp  main_dmvio_t265.cpp  main_ros.cpp
src/GTSAMIntegration/: AugmentedScatter.cpp  AugmentedScatter.hpp  BAGTSAMIntegration.h  DelayedMarginalization.cpp  DelayedMarginalization.h  FEJNoiseModelFactor.h  Marginalization.cpp  PoseTransformationFactor.cpp  PoseTransformationFactor.h  Sim3GTSAM.h
src/IMU/: BAIMULogic.cpp  CoarseIMULogic.cpp  CoarseIMULogic.h  IMUIntegration.cpp  IMUIntegration.hpp
src/IMUInitialization/: CoarseIMUInitOptimizer.cpp  CoarseIMUInitOptimizer.h  GravityInitializer.cpp  IMUInitializer.cpp  IMUInitializer.h  IMUInitializerLogic.cpp  IMUInitializerLogic.h  PoseGraphBundleAdjustment.cpp
src/dso/FullSystem/: FullSystem.cpp  FullSystem.h  FullSystemOptimize.cpp  HessianBlocks.cpp
src/dso/IOWrapper/OpenCV/: ImageDisplay_OpenCV.cpp
src/dso/IOWrapper/OutputWrapper/: SampleOutputWrapper.h
src/dso/IOWrapper/Pangolin/: KeyFrameDisplay.h  PangolinDSOViewer.cpp  PangolinDSOViewer.h
src/dso/OptimizationBackend/: AccumulatedSCHessian.h  AccumulatedTopHessian.h  EnergyFunctional.cpp
src/dso/util/: DatasetReader.h  FrameShell.h  IndexThreadReduce.h  settings.cpp
src/live/: DatasetSaver.cpp
src/util/: MainSettings.cpp
